[gd_scene load_steps=55 format=2]

[ext_resource path="res://assets/Enemy/Character_sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/Shadows/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://Hitboxes_and_Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Enemy/Golem.gd" type="Script" id=4]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_lunge.wav" type="AudioStream" id=5]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/projectile_spawn.wav" type="AudioStream" id=6]
[ext_resource path="res://Hitboxes_and_Hurtboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Shaders/HitShader.gdshader" type="Shader" id=8]
[ext_resource path="res://Hitboxes_and_Hurtboxes/HitAnimationPlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Music and Sounds/SFX/Scenes/HitSFX.tscn" type="PackedScene" id=10]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_special_charge.wav" type="AudioStream" id=11]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_appearance.wav" type="AudioStream" id=12]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_music_start.wav" type="AudioStream" id=13]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_music_loop.wav" type="AudioStream" id=14]
[ext_resource path="res://ScreenEffects/NameDrop.tscn" type="PackedScene" id=15]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_hit.wav" type="AudioStream" id=16]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_block.wav" type="AudioStream" id=17]

[sub_resource type="ShaderMaterial" id=58]
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.99997
height = 16.0001

[sub_resource type="Animation" id=59]
resource_name = "appearance"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1.2, 1.4, 1.6, 1.8, 2, 3, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 83, 82, 81, 80, 79, 78, 77, 75, 74, 73, 72, 70 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.4, 3.8, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_shadow"
}, {
"args": [  ],
"method": "introduction"
}, {
"args": [  ],
"method": "appearance_anim_end"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "block"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.9, 1.4, 1.9, 2.4, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "block_anim_end"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.4, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide_shadow"
}, {
"args": [  ],
"method": "death_anim_finished"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "glow"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=7]
resource_name = "melee"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "lock_on"
}, {
"args": [  ],
"method": "melee_charge_end"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 1.1 )
}

[sub_resource type="Animation" id=3]
resource_name = "normal"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "quad_laser"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1.1, 1.5, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55, 56 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "special_charge_end"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "ranged"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ranged_charge_end"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ability_anim_end"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.9 )
}

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "appearance"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "block"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "glow"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "melee"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "normal"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "quad_laser"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "ranged"

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=68]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachine" id=52]
states/appearance/node = SubResource( 60 )
states/appearance/position = Vector2( 629, -22 )
states/block/node = SubResource( 33 )
states/block/position = Vector2( 477, 17 )
states/death/node = SubResource( 61 )
states/death/position = Vector2( 848, -12 )
states/glow/node = SubResource( 35 )
states/glow/position = Vector2( 884, 98 )
states/melee/node = SubResource( 67 )
states/melee/position = Vector2( 498, 210 )
states/normal/node = SubResource( 38 )
states/normal/position = Vector2( 629, 98 )
states/quad_laser/node = SubResource( 54 )
states/quad_laser/position = Vector2( 813, 218 )
states/ranged/node = SubResource( 39 )
states/ranged/position = Vector2( 353, 98 )
transitions = [ "normal", "block", SubResource( 40 ), "block", "normal", SubResource( 41 ), "glow", "normal", SubResource( 44 ), "normal", "glow", SubResource( 45 ), "ranged", "normal", SubResource( 50 ), "normal", "ranged", SubResource( 51 ), "normal", "quad_laser", SubResource( 55 ), "quad_laser", "normal", SubResource( 56 ), "appearance", "normal", SubResource( 62 ), "normal", "appearance", SubResource( 63 ), "death", "normal", SubResource( 64 ), "normal", "death", SubResource( 65 ), "melee", "normal", SubResource( 68 ), "normal", "melee", SubResource( 69 ) ]
start_node = "appearance"
end_node = "death"
graph_offset = Vector2( 131, 68 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=53]

[sub_resource type="CapsuleShape2D" id=10]
radius = 9.99994
height = 68.0001

[sub_resource type="CapsuleShape2D" id=57]
radius = 8.99994
height = 70.0002

[sub_resource type="CircleShape2D" id=66]
radius = 71.007

[node name="Golem" type="KinematicBody2D"]
collision_layer = 64
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 58 )
position = Vector2( -1, -36 )
texture = ExtResource( 1 )
hframes = 10
vframes = 10
frame = 70

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appearance = SubResource( 59 )
anims/block = SubResource( 4 )
anims/death = SubResource( 9 )
anims/glow = SubResource( 5 )
anims/melee = SubResource( 7 )
anims/normal = SubResource( 3 )
anims/quad_laser = SubResource( 6 )
anims/ranged = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 52 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 53 )

[node name="LargeShadow" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 1.28125, 1 )
texture = ExtResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( -1, -23 )
collision_layer = 8
reboundX = 75
reboundY = 75
inv_duration = 0.2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 3.8147e-06, 0 )
rotation = 1.5708
scale = Vector2( 1, 0.5 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -23 )
collision_mask = 132
knockback = 200
knockbackVector = Vector2( 100, 100 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
scale = Vector2( 1, 0.5 )
shape = SubResource( 57 )

[node name="HitAnimationPlayer" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
bus = "SFX"

[node name="HitSFX" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="BlockSFX" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 17 )
volume_db = -10.0

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource( 66 )

[node name="BossMusicStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Music"

[node name="BossMusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "Music"

[node name="NameDrop" parent="." instance=ExtResource( 15 )]

[node name="Name" parent="NameDrop" index="0"]
margin_left = -109.0
margin_top = 18.0
margin_right = 1.0
margin_bottom = 34.0
text = "ANCIENT GOLEM"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered"]
[connection signal="finished" from="BossMusicStart" to="." method="_on_BossMusicStart_finished"]
[connection signal="finished" from="BossMusicLoop" to="." method="_on_BossMusicLoop_finished"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="NameDrop"]
